--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -104,7 +104,7 @@
                             <p class="lead">Clan Chest Crowns: <%= top.clanChestCrowns %></p>
                             <p class="lead">Trophies: <%= top.trophies %></p>
                             <p class="lead">Arena: <%= top.arena.name %></p>
-                            <p class="card-text">Special thanks given to this player for their hard work and contribution to the clan. The rest of our players better step up.</p>
+                            <p class="card-text">Special thanks given to this player for their hard work and contribution to the clan. The rest of our players deserve a right bashing.</p>
                         </div>
                     </div>
                 </div>
