--- a/public/views/error.ejs
+++ b/public/views/error.ejs
@@ -56,7 +56,7 @@
                 <div class="card-block">
                     <p class="card-text">Whoops! Something went wrong there, neighbourinos!</p>
                     <p class="card-text"><%= message %></p>
-                    <p class="card-text"><img src="/media/error/sad.png" alt="cry face"></p>
+                    <p class="card-text"><img class="error-img" src="/media/error/sad.png" alt="cry face"></p>
                 </div>
             </div>
         </div>
