--- a/public/views/error.ejs
+++ b/public/views/error.ejs
@@ -56,7 +56,7 @@
                 <div class="card-block">
                     <p class="card-text">Whoops! Something went wrong there, neighbourinos!</p>
                     <p class="card-text"><%= message %></p>
-                    <img class="error-img" src="/media/error/sad.png" alt="cry face">
+                    <img class="error-img img-fluid" src="/media/error/sad.png" alt="cry face">
                 </div>
             </div>
         </div>
