--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -47,7 +47,15 @@
     </header>
     <!--<div class="container-fluid" id="home-slides">-->
         <div id="bannerSlides" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="false">
-            <div class="carousel-inner" id="bannerInner"></div>
+            <div class="carousel-inner" id="bannerInner">
+                <% for(var i=0; i< pics.length; i++){ %>
+                    <%if(i==0){%>
+                        <div class="carousel-item active"><img class="d-block w-100 img-fluid" alt="home page background" src="<%=pics[i].name%>"></div>
+                    <%}else{%>
+                        <div class="carousel-item"><img class="d-block w-100 img-fluid" alt="home page background" src="<%=pics[i].name%>"></div>
+                    <%}%>
+                <% } %>
+            </div>
         </div>
     <!--</div>-->
     <main>
@@ -117,21 +125,4 @@
     </footer>
 </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $.getJSON('/files/media/home')
-            .done(function(data){
-                var i = 0;
-                $.each(data, function(key, val){
-                    if(i==0){
-                        $('#bannerInner').append('<div class="carousel-item active"><img class="d-block w-100 img-fluid" alt="home page background" src="' + val.name + '">');
-                    }
-                    else{
-                        $('#bannerInner').append('<div class="carousel-item"><img class="d-block w-100 img-fluid" alt="home page background" src="' + val.name + '">');
-                    }
-                    i += 1;
-                });
-            });
-        });
-    </script>
 </html>
