--- a/public/views/player.ejs
+++ b/public/views/player.ejs
@@ -276,7 +276,7 @@
                         <h3 class="card-header">Upcoming Chest Cycle</h3>
                         <div class="card-block">
                             <div id="player-chest-cycle">
-                                <% data.chestCycle.upcoming.forEach(function(chest){ %>
+                                <% chests.upcoming.forEach(function(chest){ %>
                                     <img src="/media/chests/<%=chest%>.png">
                                 <% }) %>
                             </div>
@@ -284,7 +284,7 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="battle-history" role="tabpanel" aria-labelledby="battle-history-tab">
-                    <%- include('./partials/battleHistory', {battles: data.battles}); %>
+                    <%- include('./partials/battleHistory', {battles}); %>
                 </div>
             </div>
             <br/><br/>
