log tracks more info

--- a/public/views/partials/battleHistory.ejs
+++ b/public/views/partials/battleHistory.ejs
@@ -115,6 +115,7 @@
                     <%});%>
                 </div>
             </div>
+            <%= new Date(battle.utcTime * 1000) %>
         </div>
     <% }else{ %>
         <div class="card">
@@ -194,6 +195,7 @@
                     <%});%>
                 </div>
             </div>
+            <%= new Date(battle.utcTime * 1000) %>
         </div>
     <%}%>
     <br/>
