--- a/public/views/partials/battleHistory.ejs
+++ b/public/views/partials/battleHistory.ejs
@@ -53,7 +53,7 @@
                     </p>
                     <br/>
                     <%battle.team[0].deck.forEach(function(card){%>
-                        <img class="battle-history-deck" src="<%=card.icon%>" alt="team deck cards">
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="<%=card.name%>">
                     <%});%>
                     <br/><br/>
                     <p class="lead player-name-history">
@@ -72,7 +72,7 @@
                     </p>
                     <br/>
                     <%battle.team[1].deck.forEach(function(card){%>
-                        <img class="battle-history-deck" src="<%=card.icon%>" alt="team deck cards">
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="<%=card.name%>">
                     <%});%>
                 </div>
                 <div class="col-6">
@@ -92,7 +92,7 @@
                     </p>
                     <br/>
                     <%battle.opponent[0].deck.forEach(function(card){%>
-                        <img class="battle-history-deck" src="<%=card.icon%>" alt="opponent cards">
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="<%=card.name%>">
                     <%});%>
                     <br/><br/>
                     <p class="lead player-name-history">
@@ -111,7 +111,7 @@
                     </p>
                     <br/>
                     <%battle.opponent[1].deck.forEach(function(card){%>
-                        <img class="battle-history-deck" src="<%=card.icon%>" alt="opponent cards">
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="<%=card.name%>">
                     <%});%>
                 </div>
             </div>
@@ -171,7 +171,7 @@
                     </p>
                     <br/>
                     <%battle.team[0].deck.forEach(function(card){%>
-                        <img class="battle-history-deck" src="<%=card.icon%>" alt="team deck cards">
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="<%=card.name%>">
                     <%});%>
                 </div>
                 <div class="col-6">
@@ -191,7 +191,7 @@
                     </p>
                     <br/>
                     <%battle.opponent[0].deck.forEach(function(card){%>
-                        <img class="battle-history-deck" src="<%=card.icon%>" type="opponent deck cards">
+                        <img class="battle-history-deck" src="<%=card.icon%>" type="<%=card.name%>">
                     <%});%>
                 </div>
             </div>
