fixed alt text error

--- a/public/views/partials/battleHistory.ejs
+++ b/public/views/partials/battleHistory.ejs
@@ -191,7 +191,7 @@
                     </p>
                     <br/>
                     <%battle.opponent[0].deck.forEach(function(card){%>
-                        <img class="battle-history-deck" src="<%=card.icon%>" type="<%=card.name%>">
+                        <img class="battle-history-deck" src="<%=card.icon%>" alt="<%=card.name%>">
                     <%});%>
                 </div>
             </div>
