fixed alt text error

--- a/public/views/player.ejs
+++ b/public/views/player.ejs
@@ -51,7 +51,7 @@
                 <div class="card-header">
                     <div class="row">
                         <div class="col-sm-2">
-                            <img src="<%= data.clan.badge.image %>">
+                            <img src="<%= data.clan.badge.image %>" alt="clan badge">
                         </div>
                         <div class="col-sm-10">
                             <h1> <%= data.name %></h1>
@@ -91,7 +91,7 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/player_level.png">
+                                <img class="clan-info-card-img" src="/media/clan/player_level.png" alt="player level">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Level</h4>
@@ -99,7 +99,7 @@
                             </div>
                             <br/>
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/trophies.png">
+                                <img class="clan-info-card-img" src="/media/clan/trophies.png" alt="current tophies">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Trophies</h4>
@@ -111,7 +111,7 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/arenas/<%=data.arena.arenaID%>.png">
+                                <img class="clan-info-card-img" src="/media/arenas/<%=data.arena.arenaID%>.png" alt="arena">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Arena</h4>
@@ -119,7 +119,7 @@
                             </div>
                             <br/>
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/trophies.png">
+                                <img class="clan-info-card-img" src="/media/clan/trophies.png" alt="max trophies">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Max. Trophies</h4>
@@ -131,7 +131,7 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/donations.png">
+                                <img class="clan-info-card-img" src="/media/clan/donations.png" alt="total donations">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Total Donations</h4>
@@ -139,7 +139,7 @@
                             </div>
                             <br/>
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/donations.png">
+                                <img class="clan-info-card-img" src="/media/clan/donations.png" alt="cards found">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Cards Found</h4>
@@ -151,7 +151,7 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/donations.png">
+                                <img class="clan-info-card-img" src="/media/clan/donations.png" alt="current donations">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Donations</h4>
@@ -159,7 +159,7 @@
                             </div>
                             <br/>
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/donations.png">
+                                <img class="clan-info-card-img" src="/media/clan/donations.png" alt="cards received">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Received</h4>
@@ -171,7 +171,7 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/battle.png">
+                                <img class="clan-info-card-img" src="/media/clan/battle.png" alt="total games">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Total Games</h4>
@@ -179,7 +179,7 @@
                             </div>
                             <br/>
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/crowns.png">
+                                <img class="clan-info-card-img" src="/media/clan/crowns.png" alt="3-crown wins">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">3 Crown Wins</h4>
@@ -191,7 +191,7 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/battle.png">
+                                <img class="clan-info-card-img" src="/media/clan/battle.png" alt="wins">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Wins</h4>
@@ -199,7 +199,7 @@
                             </div>
                             <br/>
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/battle.png">
+                                <img class="clan-info-card-img" src="/media/clan/battle.png" alt="losses">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Losses</h4>
@@ -211,7 +211,7 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/tournament.png">
+                                <img class="clan-info-card-img" src="/media/clan/tournament.png" alt="tournament games">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Tournament Games</h4>
@@ -219,7 +219,7 @@
                             </div>
                             <br/>
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/donations.png">
+                                <img class="clan-info-card-img" src="/media/clan/donations.png" alt="tournament cards">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Tournament Cards Won</h4>
@@ -231,7 +231,7 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/tournament.png">
+                                <img class="clan-info-card-img" src="/media/clan/tournament.png" alt="tournament">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Challenge Max Wins</h4>
@@ -239,7 +239,7 @@
                             </div>
                             <br/>
                             <div class="col-md-2">
-                                <img class="clan-info-card-img" src="/media/clan/donations.png">
+                                <img class="clan-info-card-img" src="/media/clan/donations.png" alt="donations">
                             </div>
                             <div class="col-md-4">
                                 <h4 class="card-title">Challenge Cards Won</h4>
@@ -251,7 +251,7 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-md-3">
-                                <img class="clan-info-card-img" src="<%= data.stats.favoriteCard.icon%>">
+                                <img class="clan-info-card-img" src="<%= data.stats.favoriteCard.icon%>" alt="<%= data.stats.favoriteCard.name %>">
                             </div>
                             <div class="col-md-7">
                                 <h4 class="card-title">Favorite Card</h4>
@@ -266,7 +266,7 @@
                         <div class="card-block">
                             <div id="player-deck">
                                 <% data.currentDeck.forEach(function(card){ %>
-                                    <img src="<%= card.icon %>">
+                                    <img src="<%= card.icon %>" alt="<%=card.name%>">
                                 <% }) %>
                             </div>
                         </div>
@@ -277,7 +277,7 @@
                         <div class="card-block">
                             <div id="player-chest-cycle">
                                 <% chests.upcoming.forEach(function(chest){ %>
-                                    <img src="/media/chests/<%=chest%>.png">
+                                    <img src="/media/chests/<%=chest%>.png" alt="<%=chest%>">
                                 <% }) %>
                             </div>
                         </div>
